--- a/public/styles.css
+++ b/public/styles.css
@@ -5,8 +5,8 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height: 256px;
-    width: 256px; }
+    max-width: 100%;
+    max-height: 100%; }
 
 body,
 html {
