--- a/public/styles.css
+++ b/public/styles.css
@@ -5,8 +5,8 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 100%;
-    max-height: 100%; }
+    max-width: 256px;
+    max-height: 256px; }
 
 body,
 html {
